--- a/website/style.css
+++ b/website/style.css
@@ -283,6 +283,7 @@ a:hover{text-decoration: none; cursor:pointer;}
 	background:transparent;
 }
 .navbar-toggle{
+	background-color: rgba(0,0,0,.5);
 	margin: 10px 10px 0 0;
 	border: 0px;
 }
