--- a/web/css/style.css
+++ b/web/css/style.css
@@ -267,12 +267,64 @@ h1{
 }
 
 .block-2 .left{
+  clear: both;
   float:left;
   width: 35%;
   margin-bottom: 10px;
   margin: 20px 0% 5% 15%;
 }
 .block-2 img{
+  width: 95%;
+  height: auto;
+}
+
+/** 
+ * Block 3 (簡介)
+ */
+.block-3{
+  height: 490px;
+  width: 100%;
+  background-image: url(https://andy6804tw.github.io/yenchao-library-web-2018/material/Images/home/home-block03.png);
+  -moz-background-size: cover;
+  background-size: cover;
+}
+
+.block-3 .left{
+  clear: both;
+  float:left;
+  width: 30%;
+  margin-bottom: 10px;
+  margin: 0% 4% 5% 16%;
+}
+.left p{
+  margin-top: 35px;
+  font-size: 15px;
+  color: #47454a;
+}
+.block-3 .button{
+  text-align: center;
+}
+.block-3 a {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
+.block-3 .right{
+  float:left;
+  width: 35%;
+  margin-bottom: 10px;
+  margin: 10px 15% 5% 0%;
+}
+.block-3 img{
   width: 95%;
   height: auto;
 }
