--- a/web/css/intro.css
+++ b/web/css/intro.css
@@ -94,6 +94,17 @@ body {
 /**
  * parallex
  */
+
+/* global */
+.parallex{
+  width: 100%;
+  height: 680px;
+  position: relative;
+  padding: 0;
+  background-attachment: fixed;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+}
 h1 {
   position: relative;
   top: 50%;
@@ -105,34 +116,28 @@ h1 {
   text-align: center;
   color: white;
 }
-
-p {
-  margin: 0 60px;
-  font-weight: 300;
-}
-
 .overlay {
+  opacity: 0;
+  position: absolute;
+  box-sizing: border-box;
+  background-color: rgba(0,0,0,.3);
+  top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
-  color: black;
+  text-align: center;
+  padding-top: 40px;
+  -moz-transition: .5s ease-out;
+  -o-transition: .5s ease-out;
+  -webkit-transition: .5s ease-out;
+  transition: .5s ease-out;
 }
-
-section {
-  width: 100%;
-  height: 450px;
-  padding: 60px 0;
-  background: white;
+.overlay:hover{
+  -moz-transition: 500ms;
+  -o-transition: 500ms;
+  -webkit-transition: 500ms;
+  transition: 500ms;
+  opacity: 1;
 }
-
-.img {
-  padding: 0;
-  min-height: 500px;
-  background-attachment: fixed;
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-}
-
 .img:first-child {
   height: 300px;
   min-height: inherit;
@@ -140,3 +145,113 @@ section {
   background-position: center;
   background-size: cover;
 }
+.desc{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:70%;
+  height:400px;
+  margin: 0 auto;
+}
+p {
+  font-size: 18px;
+  font-weight: 300;
+}
+h2{
+  font-size: 28px;
+}
+
+/* block 01 */
+.block-1{
+  height: 1080px;
+}
+.block-1 .img1{
+  background-image: url(/web/images/intro/intro-img01.jpg);
+}
+
+/* block 02 */
+.block-2{
+  height: 1080px;
+}
+.block-2 .img2{
+  background-image: url(/web/images/intro/intro-img02.jpg);
+}
+
+/* block 03 */
+.block-3{
+  height: 1080px;
+}
+.block-3 .img3{
+  background-image: url(/web/images/intro/intro-img03.jpg);
+}
+
+/* block 04 */
+.block-4{
+  height: 1080px;
+}
+.block-4 .img4{
+  background-image: url(/web/images/intro/intro-img04.jpg);
+}
+
+/* block 05 */
+.block-5{
+  height: 1080px;
+}
+.block-5 .img5{
+  background-image: url(/web/images/intro/intro-img05.jpg);
+}
+
+/* block 06 */
+.block-6{
+  height: 1080px;
+}
+.block-6 .img6{
+  background-image: url(/web/images/intro/intro-img06.jpg);
+}
+
+/* block 07 */
+.block-7{
+  height: 1080px;
+}
+.block-7 .img7{
+  background-image: url(/web/images/intro/intro-img07.jpg);
+}
+
+/* block 08 */
+.block-8{
+  height: 1080px;
+}
+.block-8 .img8{
+  background-image: url(/web/images/intro/intro-img08.jpg);
+}
+
+/* block 09 */
+.block-9{
+  height: 1080px;
+}
+.block-9 .img9{
+  background-image: url(/web/images/intro/intro-img09.jpg);
+}
+
+/* block 10 */
+.block-10{
+  height: 1080px;
+}
+.block-10 .img10{
+  background-image: url(/web/images/intro/intro-img10.jpg);
+}
+
+ @media (max-width: 1000px) {
+   .block-1 .img1{
+    background-image: url(/web/images/intro/intro-mobile-img01.jpg);
+  }
+  .desc{
+    width: 90%;
+  }
+  p{
+    font-size: 30px;
+  }
+  h2{
+    font-size: 40px;
+  }
+ }
