--- a/web/css/intro.css
+++ b/web/css/intro.css
@@ -166,7 +166,7 @@ h2{
   height: 1080px;
 }
 .block-1 .img1{
-  background-image: url(/web/images/intro/intro-img01.jpg);
+  background-image: url(./../images/intro/intro-img01.jpg);
 }
 
 /* block 02 */
@@ -174,7 +174,7 @@ h2{
   height: 1080px;
 }
 .block-2 .img2{
-  background-image: url(/web/images/intro/intro-img02.jpg);
+  background-image: url(./../images/intro/intro-img02.jpg);
 }
 
 /* block 03 */
@@ -182,7 +182,7 @@ h2{
   height: 1080px;
 }
 .block-3 .img3{
-  background-image: url(/web/images/intro/intro-img03.jpg);
+  background-image: url(./../images/intro/intro-img03.jpg);
 }
 
 /* block 04 */
@@ -190,7 +190,7 @@ h2{
   height: 1080px;
 }
 .block-4 .img4{
-  background-image: url(/web/images/intro/intro-img04.jpg);
+  background-image: url(./../images/intro/intro-img04.jpg);
 }
 
 /* block 05 */
@@ -198,7 +198,7 @@ h2{
   height: 1080px;
 }
 .block-5 .img5{
-  background-image: url(/web/images/intro/intro-img05.jpg);
+  background-image: url(./../images/intro/intro-img05.jpg);
 }
 
 /* block 06 */
@@ -206,7 +206,7 @@ h2{
   height: 1080px;
 }
 .block-6 .img6{
-  background-image: url(/web/images/intro/intro-img06.jpg);
+  background-image: url(./../images/intro/intro-img06.jpg);
 }
 
 /* block 07 */
@@ -214,7 +214,7 @@ h2{
   height: 1080px;
 }
 .block-7 .img7{
-  background-image: url(/web/images/intro/intro-img07.jpg);
+  background-image: url(./../images/intro/intro-img07.jpg);
 }
 
 /* block 08 */
@@ -222,7 +222,7 @@ h2{
   height: 1080px;
 }
 .block-8 .img8{
-  background-image: url(/web/images/intro/intro-img08.jpg);
+  background-image: url(./../images/intro/intro-img08.jpg);
 }
 
 /* block 09 */
@@ -230,7 +230,7 @@ h2{
   height: 1080px;
 }
 .block-9 .img9{
-  background-image: url(/web/images/intro/intro-img09.jpg);
+  background-image: url(./../images/intro/intro-img09.jpg);
 }
 
 /* block 10 */
@@ -238,12 +238,12 @@ h2{
   height: 1080px;
 }
 .block-10 .img10{
-  background-image: url(/web/images/intro/intro-img10.jpg);
+  background-image: url(./../images/intro/intro-img10.jpg);
 }
 
  @media (max-width: 1000px) {
    .block-1 .img1{
-    background-image: url(/web/images/intro/intro-mobile-img01.jpg);
+    background-image: url(./../images/intro/intro-mobile-img01.jpg);
   }
   .desc{
     width: 90%;
