--- a/web/css/intro.css
+++ b/web/css/intro.css
@@ -73,7 +73,7 @@ body {
     }
      nav ul.active {
          display: block;
-         padding-top: 20px;
+         background-color: rgba(255, 255, 255, 0.678);
     }
      nav ul li {
          display: block;
