--- a/web/css/style.css
+++ b/web/css/style.css
@@ -76,7 +76,7 @@ h1{
     }
      nav ul.active {
          display: block;
-         padding-top: 20px;
+         background-color: rgba(255, 255, 255, 0.678);
     }
      nav ul li {
          display: block;
