--- a/web/css/style.css
+++ b/web/css/style.css
@@ -2,6 +2,9 @@
      margin: 0;
      font-family: Arial;
 }
+body, html {
+    overflow-x: hidden;
+} 
 h1{
   font-size: 35px;
   font-weight: 500;
