--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,9 +1,11 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 * {
      margin: 0;
      font-family: Arial;
 }
 body, html {
-    overflow-x: hidden;
+  font-family: 'Noto Sans TC', sans-serif;
+  overflow-x: hidden;
 } 
 h1{
   font-size: 35px;
