--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -1,11 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
-body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
+ body {
+     margin: 0;
+     font-family: 'Roboto', sans-serif;
 }
-
 /* 導航列 */
- nav {
+ nav{
      padding: 20px;
      min-height: 150px;
      background:#fff url(./../images/home/home-block.png) no-repeat;
@@ -21,8 +20,8 @@ body {
      display: none;
 }
 /* 文字連結 */
-.navbar-bottom{
-  text-align: center;
+ .navbar-bottom{
+     text-align: center;
 }
  nav ul{
      list-style-type:none;
@@ -90,147 +89,138 @@ body {
          padding-bottom: 0;
     }
 }
-
-/**
- * parallex
- */
-
+/** * parallex */
 /* global */
-.parallex{
-  width: 100%;
-  height: 680px;
-  position: relative;
-  padding: 0;
-  background-attachment: fixed;
-  background-position: 50% 0;
-  background-repeat: no-repeat;
+ .parallex{
+     width: 100%;
+     height: 680px;
+     position: relative;
+     padding: 0;
+    /* background-attachment: fixed;
+     */
+    /* background-position: 50% 0;
+     */
+    /* background-repeat: no-repeat;
+     */
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
-h1 {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  margin: 0;
-  font-size: 50px;
-  font-weight: 100;
-  text-align: center;
-  color: white;
+ h1 {
+     position: relative;
+     top: 50%;
+     -webkit-transform: translateY(-50%);
+     transform: translateY(-50%);
+     margin: 0;
+     font-size: 50px;
+     font-weight: 100;
+     text-align: center;
+     color: white;
 }
-.overlay {
-  opacity: 0;
-  position: absolute;
-  box-sizing: border-box;
-  background-color: rgba(0,0,0,.3);
-  top: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  padding-top: 40px;
-  -moz-transition: .5s ease-out;
-  -o-transition: .5s ease-out;
-  -webkit-transition: .5s ease-out;
-  transition: .5s ease-out;
+ .overlay {
+     opacity: 0;
+     position: absolute;
+     box-sizing: border-box;
+     background-color: rgba(0,0,0,.3);
+     top: 0;
+     width: 100%;
+     height: 100%;
+     text-align: center;
+     padding-top: 40px;
+     -moz-transition: .5s ease-out;
+     -o-transition: .5s ease-out;
+     -webkit-transition: .5s ease-out;
+     transition: .5s ease-out;
 }
-.overlay:hover{
-  -moz-transition: 500ms;
-  -o-transition: 500ms;
-  -webkit-transition: 500ms;
-  transition: 500ms;
-  opacity: 1;
+ .overlay:hover{
+     -moz-transition: 500ms;
+     -o-transition: 500ms;
+     -webkit-transition: 500ms;
+     transition: 500ms;
+     opacity: 1;
 }
 /* .img:first-child {
-  height: 300px;
-  min-height: inherit;
-  background-attachment: inherit;
-  background-position: center;
-  background-size: cover;
-} */
-.desc{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  width:70%;
-  height:500px;
-  margin: 0 auto;
+     height: 300px;
+     min-height: inherit;
+     background-attachment: inherit;
+     background-position: center;
+     background-size: cover;
 }
-p {
-  font-size: 18px;
-  font-weight: 300;
+ */
+ .desc{
+     display:flex;
+     align-items:center;
+     justify-content:center;
+     width:70%;
+     height:500px;
+     margin: 0 auto;
 }
-h2{
-  font-size: 28px;
+ p {
+     font-size: 18px;
+     font-weight: 300;
 }
-.block{
-  height: 1180px;
+ h2{
+     font-size: 28px;
 }
-
+ .block{
+     height: 1180px;
+}
 /* block 01 */
-.block .img1{
-  background-image: url(./../images/intro/intro-img01.jpg);
+ .block .img1{
+     background-image: url(./../images/intro/intro-img01.jpg);
 }
-
 /* block 02 */
-.block .img2{
-  background-image: url(./../images/intro/intro-img02.jpg);
+ .block .img2{
+     background-image: url(./../images/intro/intro-img02.jpg);
 }
-
 /* block 03 */
-.block .img3{
-  background-image: url(./../images/intro/intro-img03.jpg);
+ .block .img3{
+     background-image: url(./../images/intro/intro-img03.jpg);
 }
-
 /* block 04 */
-.block .img4{
-  background-image: url(./../images/intro/intro-img04.jpg);
+ .block .img4{
+     background-image: url(./../images/intro/intro-img04.jpg);
 }
-
 /* block 05 */
-.block .img5{
-  background-image: url(./../images/intro/intro-img05.jpg);
+ .block .img5{
+     background-image: url(./../images/intro/intro-img05.jpg);
 }
-
 /* block 06 */
-.block .img6{
-  background-image: url(./../images/intro/intro-img06.jpg);
+ .block .img6{
+     background-image: url(./../images/intro/intro-img06.jpg);
 }
-
 /* block 07 */
-.block .img7{
-  background-image: url(./../images/intro/intro-img07.jpg);
+ .block .img7{
+     background-image: url(./../images/intro/intro-img07.jpg);
 }
-
 /* block 08 */
-.block .img8{
-  background-image: url(./../images/intro/intro-img08.jpg);
+ .block .img8{
+     background-image: url(./../images/intro/intro-img08.jpg);
 }
-
 /* block 09 */
-.block .img9{
-  background-image: url(./../images/intro/intro-img09.jpg);
+ .block .img9{
+     background-image: url(./../images/intro/intro-img09.jpg);
 }
-
 /* block 10 */
-.block .img10{
-  background-image: url(./../images/intro/intro-img10.jpg);
+ .block .img10{
+     background-image: url(./../images/intro/intro-img10.jpg);
 }
-
  @media (max-width: 1000px) {
-   .block{
-    height: 1380px;
-  }
-  .desc{
-    height: 700px;
-  }
-   .block .img1{
-    background-image: url(./../images/intro/intro-mobile-img01.jpg);
-  }
-  .desc{
-    width: 90%;
-  }
-  p{
-    font-size: 30px;
-  }
-  h2{
-    font-size: 40px;
-  }
- }
+     .block{
+         height: 1380px;
+    }
+     .desc{
+         height: 700px;
+    }
+     .desc{
+         width: 90%;
+    }
+     p{
+         font-size: 30px;
+    }
+     h2{
+         font-size: 40px;
+    }
+}
+ 
